--- a/src/web/static/ui.css
+++ b/src/web/static/ui.css
@@ -1,9 +1,3 @@
-#groups-list {
-    width: 200px;
-    display: inline-block;
-    vertical-align: top;
-}
-
 #group-info {
     display: inline-block;
     vertical-align: top;
@@ -13,10 +7,10 @@
     min-width: 100px;
 }
 
-#people-list {
-    width: 250px;
-    display: inline-block;
-    vertical-align: top;
+.list {
+    min-width: 250px;
+    height: 400px;
+    overflow-y: scroll;
 }
 
 #person-info {
@@ -28,8 +22,14 @@
     min-width: 100px;
 }
 
-.btn {
-	width: 50px;
+.tool {
+	width: 32px;
+    height: 32px;
+    display: inline-block;
+}
+
+.toolbar {
+    margin-bottom: 5px;
 }
 
 .table {
@@ -41,3 +41,4 @@
 	width: auto;
 	display: inline-block;
 	vertical-align: top;
+}
